--- a/project 1/css/style.css
+++ b/project 1/css/style.css
@@ -1,3 +1,5 @@
+@import "card.css";
+
 body {
     background-color: #f6f6f6;
     font-family: 'Baloo Tamma 2', sans-serif;
@@ -18,9 +20,6 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper {
     margin: 0 auto;
     width: 1100px;
-}
-
-.inner-wrapper {
     padding-left: 1rem;
     padding-right: 1rem;
 }
