add cards, style home page

--- a/project 1/css/style.css
+++ b/project 1/css/style.css
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .container {
     display: grid;
-    grid-template-rows: 150px calc(100vh - 200px) 50px;
+    grid-template-rows: 150px minmax(calc(100vh - 200px), 100%) 50px;
     grid-template-areas: 
         "heading"
         "main"
