--- a/project 1/css/card.css
+++ b/project 1/css/card.css
@@ -8,4 +8,28 @@
     border: 1px solid black;
     margin: 1rem;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.card > figure {
+    margin: unset;
+    align-self: center;
+}
+
+.card > figure > img {
+    display: flex;
+    max-width: 200px;
+}
+
+.card > div > button {
+    width: 100%;
+    min-height: 30px;
+    background-color: rebeccapurple;
+    color: white;
+}
+
+.card > div > button:hover {    
+    background-color: #2fbdbf;
+    color: black;
 }
