--- a/project 1/css/blog.css
+++ b/project 1/css/blog.css
@@ -4,6 +4,7 @@
     grid-template-areas: 
         "hero"
         "post"
+        "aside";
 }
 
 .hero {
@@ -11,12 +12,58 @@
     flex: 1;
     background-size: cover;
     background-position: center;
+    grid-column: 1/-1;
 }
-.hero-twisted-trees {
-    background-image: url("../images/twisted-trees.jpg");
+
+.hero-title {
+    min-width: 100px;
+    max-width: 50%;
 }
 
 .content {
     grid-area: post;
     flex: 1;
+}
+
+.aside {
+    background: #424242;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 1rem;
+}
+
+.author-img {
+    height: 150px;
+    width: 150px;
+    border-radius: 100%;
+    align-self: center;
+}
+
+.social-media {
+    filter: invert(100%);
+    align-self: center;
+}
+
+.facebook:hover, .linkedin:hover {
+    filter: invert(100%)
+    sepia(100%)
+    saturate(10000%)
+    hue-rotate(-413deg);
+}
+
+.twitter:hover {
+    filter: invert(70%)
+    sepia(100%)
+    saturate(10000%)
+    hue-rotate(45deg);
+}
+
+@media all and (min-width: 800px) {
+    .blog {
+        grid-template-columns: auto 200px;
+    }
+    .aside {
+        grid-area: 2/2/-1/-1;
+    } 
 }
