finaize all pages

--- a/project 1/css/style.css
+++ b/project 1/css/style.css
@@ -1,5 +1,6 @@
 @import "card.css";
 @import "blog.css";
+@import "nav.css";
 
 body {
     background-color: #f6f6f6;
@@ -9,9 +10,20 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Josefin Slab', serif;
 }
+blockquote:before, blockquote:after {
+    font-family: cursive;
+    font-size: 1.5rem;
+    
+}
+blockquote:before {
+    content: "“";
+}
+blockquote:after {
+    content: "”"
+}
 .container {
     display: grid;
-    grid-template-rows: 150px minmax(calc(100vh - 200px), 100%) 50px;
+    grid-template-rows: 250px minmax(calc(100vh - 200px), 100%) 50px;
     grid-template-areas: 
         "heading"
         "main"
@@ -34,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .header {
     display: grid;
-    grid-template-rows: 100px 50px;
+    grid-template-rows: 200px 50px;
     grid-template-areas: 
         "name"
         "nav";
@@ -45,40 +57,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .blog-name {
     grid-area: name;
-}
-
-.main-nav {
-    grid-area: nav;
-    background-color: #1D7677;
-}
-
-.nav > ul {
-    display: flex;
-    padding: unset;
-    list-style-type: none;
-}
-
-.nav > ul > li {
-    display: flex;
-
-}
-.nav > ul > li > a {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.main-nav > ul > li > a {
-    color: #f6f6f6;
-    text-decoration: unset;
-    padding-top: .69rem;
-    padding-bottom: .69rem;
-}
-
-.main-nav > ul > li > a:focus, .main-nav >ul > li > a:hover {
-    outline: 1px dotted red;
-    text-decoration: underline;
-    background-color: #2fbdbf;
-    color: #404040;
 }
 
 .footer {
