--- a/project 1/css/blog.css
+++ b/project 1/css/blog.css
@@ -4,7 +4,7 @@
     grid-template-areas: 
         "hero"
         "post"
-        "aside";
+        "author";
 }
 
 .hero {
@@ -25,12 +25,15 @@
     flex: 1;
 }
 
-.aside {
+.author {
     background: #424242;
     display: flex;
     flex-direction: column;
     color: white;
     padding: 1rem;
+}
+.author > p > a {
+    filter: invert(1);
 }
 
 .author-img {
@@ -63,7 +66,7 @@
     .blog {
         grid-template-columns: auto 200px;
     }
-    .aside {
+    .author {
         grid-area: 2/2/-1/-1;
     } 
 }
