fix header bg color

--- a/project 1/css/style.css
+++ b/project 1/css/style.css
@@ -51,7 +51,7 @@ blockquote:after {
         "name"
         "nav";
     grid-area: heading;
-    background-color: #78C9A1;
+    background-color: #c5c5c5;
     align-items: center;
 }
 
