--- a/project 1/css/blog.css
+++ b/project 1/css/blog.css
@@ -9,15 +9,20 @@
 
 .hero {
     grid-area: hero;
-    flex: 1;
     background-size: cover;
     background-position: center;
     grid-column: 1/-1;
+    display: flex;
+    align-items: flex-end;
+    padding: .5rem;
+    flex-direction: row;
 }
 
 .hero-title {
     min-width: 100px;
     max-width: 50%;
+    padding: 1rem;
+    flex-grow: 1;
 }
 
 .content {
